--- a/templates/bmc/less/_layout/common/_forms.less
+++ b/templates/bmc/less/_layout/common/_forms.less
@@ -65,8 +65,9 @@ input[type="file"]:focus {
 	color: #777;
 	background: #fff;
 	border: 1px solid #e5e5e5;
-	padding: 0 0px 1.75em 0px;
+	//padding: 0 0px 1.75em 0px;
 	margin: 0.7em 270px 1.7em 0;
+	padding: 3em 2em 2em 2em;
 }
 
 #hubForm .explaination + fieldset {
