--- a/templates/bmc/less/_vars/_colors.less
+++ b/templates/bmc/less/_vars/_colors.less
@@ -24,10 +24,10 @@
 @colorTextDark: #393c3d;
 @colorTextVeryDark: #1c1b20;
 @colorTextSemiDark: #868a8b;
-@colorTextDarkLight: #828282;
+@colorTextDarkLight: #7b7b7b;
 @colorTextFaint: #afafaf;
 
-@colorTextBody: #757575;
+@colorTextBody: #4c4c4c;
 
 @colorTextNav: #1d201d;
 
@@ -41,3 +41,4 @@
 @colorLinkOnDark: @colorTheme;
 
 @colorLightBorder:		#f0f0f0;
+@colorSidebarBg: #f5f5f5;
